yamls/networking/istio/jaeger-istio.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger-vs
  namespace: istio-system
spec:
  hosts:
  - jaeger.local
  gateways:
  - jaeger-gw
  http:
  - route:
    - destination:
        port:
          number: 80
        host: tracing
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: jaeger-gw
  namespace: istio-system
spec:
  selector:
    app: istio-ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - jaeger.local
