yamls/networking/istio/kubedash-istio.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kubernetes-dashboard-gw
  namespace: kubernetes-dashboard
spec:
  selector:
    app: istio-ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - kubernetes-dashboard.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubernetes-dashboard-vs
  namespace: kubernetes-dashboard
spec:
  hosts:
  - kubernetes-dashboard.local
  gateways:
  - kubernetes-dashboard-gw
  http:
  - route:
    - destination:
        port:
          number: 443
        host: kubernetes-dashboard
