yamls/networking/istio/kubepromstack-istio.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: monitoring-system
spec:
  hosts:
  - prometheus.local
  gateways:
  - prometheus-gw
  http:
  - route:
    - destination:
        port:
          number: 9090
        host: prometheus-operated
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: prometheus-gw
  namespace: monitoring-system
spec:
  selector:
    app: istio-ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - prometheus.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: monitoring-system
spec:
  hosts:
  - grafana.local
  gateways:
  - grafana-gw
  http:
  - route:
    - destination:
        port:
          number: 80
        host: kps-grafana
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana-gw
  namespace: monitoring-system
spec:
  selector:
    app: istio-ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - grafana.local
